[tool.poetry]
name = "poetry-optional-groups"
version = "0.1.0"
description = "Poetry 1.2+ optional groups: [tool.poetry.group.dev] and [tool.poetry.group.test] with optional=true"
authors = ["mend-detection-qa"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31"
click = "^8.1"
pyyaml = "^6.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
hypothesis = "^6.100"
faker = "^24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
